--- a/base/dsalgo_test/Makefile
+++ b/base/dsalgo_test/Makefile
@@ -3,8 +3,16 @@ all:
 	g++ -g -o lru_hashmap_test lru_hashmap_test.cc -I. -I../../base -I../../thirdparty/gtest-1.6.0/include -L../../base/lib -L../../thirdparty/gtest-1.6.0/lib -ldsalgo -lgtest -lpthread
 	g++ -g -o entry_test entry_test.cc -I. -I../../base -I../../thirdparty/gtest-1.6.0/include -L../../base/lib -L../../thirdparty/gtest-1.6.0/lib -ldsalgo -lgtest -lpthread
 	g++ -g -o session_pool_test session_pool_test.cc -I. -I../../base -I../../thirdparty/gtest-1.6.0/include -L../../base/lib -L../../thirdparty/gtest-1.6.0/lib -ldsalgo -lgtest -lpthread
+	g++ -g -o linkedlist_test linkedlist_test.cc -I. -I../../base -I../../thirdparty/gtest-1.6.0/include -L../../base/lib -L../../thirdparty/gtest-1.6.0/lib -ldsalgo -lgtest -lpthread
+	g++ -g -o hashmap_test hashmap_test.cc -I. -I../../base -I../../thirdparty/gtest-1.6.0/include -L../../base/lib -L../../thirdparty/gtest-1.6.0/lib -ldsalgo -lgtest -lpthread
+	g++ -g -o union_search_set_test union_search_set_test.cc -I. -I../../base -I../../thirdparty/gtest-1.6.0/include -L../../base/lib -L../../thirdparty/gtest-1.6.0/lib -ldsalgo -lgtest -lpthread
+	g++ -g -o sort_test sort_test.cc -I. -I../../base -I../../thirdparty/gtest-1.6.0/include -L../../base/lib -L../../thirdparty/gtest-1.6.0/lib -ldsalgo -lgtest -lpthread
 clean:
 	rm common_queue_test
 	rm lru_hashmap_test
 	rm entry_test
 	rm session_pool_test
+	rm linkedlist_test
+	rm hashmap_test
+	rm union_search_set_test
+	rm sort_test
