modified:   base/os/singleton.h 	modified:   base/os_test/Makefile 	new file:   base/os_test/mutex_test.cc 	new file:   base/os_test/singleton_test.cc

--- a/base/os_test/Makefile
+++ b/base/os_test/Makefile
@@ -1,6 +1,10 @@
 all:
 	g++ -g -o thread_test thread_test.cc -I. -I../../base -I../../thirdparty/gtest-1.6.0/include -L../../base/lib -L../../thirdparty/gtest-1.6.0/lib -los -lgtest -lpthread
 	g++ -g -o thread_base_test thread_base_test.cc -I. -I../../base -I../../thirdparty/gtest-1.6.0/include -L../../base/lib -L../../thirdparty/gtest-1.6.0/lib -los -lgtest -lpthread
+	g++ -g -o singleton_test singleton_test.cc -I. -I../../base -I../../thirdparty/gtest-1.6.0/include -L../../base/lib -L../../thirdparty/gtest-1.6.0/lib -los -lgtest -lpthread
+	g++ -g -o mutex_test mutex_test.cc -I. -I../../base -I../../thirdparty/gtest-1.6.0/include -L../../base/lib -L../../thirdparty/gtest-1.6.0/lib -los -lgtest -lpthread
 clean:
 	rm thread_test 
 	rm thread_base_test
+	rm singleton_test
+	rm mutex_test
