modified:   service_foxea/conf/foxea.conf

--- a/service_foxea/conf/foxea.conf
+++ b/service_foxea/conf/foxea.conf
@@ -1,7 +1,7 @@
 # all config for foxea
 net:
-	listen_host:112.124.57.220
-	http_port:8011
+	listen_host:xxx.xxx.xxx.xxx
+	http_port:xxx
 	http_request_timeout:120
 	request_queue_size:200
 
