modified:   service_tornado/conf/logging.conf 	modified:   thirdparty/nginx-1.3.8/conf/nginx.conf 	modified:   thirdparty/nginx-1.4.4/conf/nginx.conf

--- a/service_tornado/conf/logging.conf
+++ b/service_tornado/conf/logging.conf
@@ -9,7 +9,8 @@ keys=fmt
 
 [logger_root]  
 level=DEBUG  
-handlers=file_handler  
+#handlers=file_handler  
+handlers=
 
 [logger_foxea]  
 level=DEBUG  
